Fix text color of demo warning not being readable in some themes.

--- a/vue-app/src/assets/main.scss
+++ b/vue-app/src/assets/main.scss
@@ -38,6 +38,9 @@ html {
     --text-color-darker: #a7b9be;
     --text-color-accent: #162f36;
 
+    --demo-text-color: var(--content-color-0);
+    --demo-text-color-hover: var(--content-color-2);
+
     --hr-color-1: var(--content-color-1);
     --hr-color-2: var(--content-color-2);
 
